# ArsiDet

./: DEPLOYMENT.md  README.md  RENDER_FIXES.md  SamsungInnovationCampus.ipynb  SamsungInnovationCampus.py  Visualization of the dataset  main.py  pyproject.toml  render.yaml  requirements-deploy.txt  requirements-render.txt  requirements.txt
.streamlit/: config.toml
ASL/train/: args.yaml
ASL/train2/: args.yaml
ASL/train3/: args.yaml  results.csv
ASL/train4/: args.yaml  results.csv
ASL/train5/: args.yaml
models/: SamsungInnovationCampus.ipynb
src/: __init__.py
src/core/: __init__.py  ai_agent.py  browser_camera_processor.py  model.py  video_processor.py  webrtc_processor.py
src/ui/: __init__.py  components.py  styles.py
src/utils/: __init__.py  config.py
train5/: results.csv
